# rs-avro2jsons

./: Cargo.toml  README.md  rs-avro2jsons  rs-avro2jsons.wasm  run.sh
sample.d/: records.jsonl  sample.avro  sample.avsc  sample.jsonl
src/: app.rs  avro2json.rs  avro2values.rs  jsons2output.rs  lib.rs  main.rs  util.rs
