[package]
name = "rs-avro2jsons"
version = "0.3.0"
edition = "2021"

description = "Converts AVRO rows to JSONs"
license = "Apache-2.0"
documentation = "https://docs.rs/crate/rs-avro2jsons/latest"
repository = "https://github.com/takanoriyanagitani/rs-avro2jsons"
keywords = [
    "avro",
    "json",
    "jsonl",
    "cli",
]
categories = [
    "command-line-interface",
    "command-line-utilities",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[profile.release]
lto = true
strip = true
codegen-units = 16

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.apache-avro]
version = "0.17.0"
default-features = false
features = [
    "snappy",
]

[dependencies.serde_json]
version = "1.0.133"
default-features = false
features = [
	"std",
]

[dependencies.serde]
version = "1.0.215"
default-features = false
features = [
	"std",
]

[features]
default = [
	"enable_bzip",
	"enable_xz",
	"enable_zstd",
]

enable_bzip = ["apache-avro/bzip"]
enable_xz = ["apache-avro/xz"]
enable_zstd = ["apache-avro/zstandard"]
